--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -3,6 +3,21 @@
 {% set raster_resources = h.get_ingested_raster(pkg,res) %}
 {% set vector_resources = h.get_ingested_vector(pkg,res) %}
 
+{% block resource_item_title %}
+    <a class="heading inline" href="{{ url }}" title="{{ res.name or res.description }}">
+        {% if h.can_preview_resource_or_ingested(pkg, res) %}
+            <i class="icon-eye-open"></i>
+            {% else %}
+            <i class="icon-info-sign"></i>
+            {% endif %}
+        {{ h.resource_display_name(res)|truncate(50) }} 
+        <span class="format-label" 
+            property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ res.format }}</span>
+        {{ h.popular('views', res.tracking_summary.total, min=10) }}
+    </a>
+{% endblock %} {# resource_item_title #}
+
+
 {% block resource_item_file %}
 {{ super() }}
 
