--- a/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
@@ -14,9 +14,12 @@ Example:
 
 #}
 
+
 {% with truncate=truncate or 0, url=h.url_for(controller='organization', action='read', id=organization.name) %}
-  <div class="module module-narrow module-shallow context-info">
-      <h2 class="module-heading"> {{ _('Organization') }}</h2>
+<div class="module module-narrow module-shallow context-info">
+    {% if has_context_title %}
+      <h2 class="module-heading">{{ _('Organization') }}</h2>
+    {% endif %}
       <!--<i class="icon-building"></i> -->
     <section class="module-content">
     {% if organization %}
@@ -26,7 +29,6 @@ Example:
                 <img src="{{ organization.image_display_url or h.url_for_static('/base/images/placeholder-organization.png')}}" width="200" alt="{{ organization.name }}" />
           </a>
         </div>
-
     {% endblock %}
       <h1 class="heading">{{ organization.title or organization.name }}</h1>
       {# {% if organization.description %}
