--- a/ckanext/publicamundi/themes/geodata/templates/package/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/read.html
@@ -1,14 +1,16 @@
 {%ckan_extends %}
 
 {% set pkg = c.pkg_dict %}
+
 {% if pkg %} 
     {% if pkg.organization %}
         {% set org = h.get_organization(pkg.organization.name) %}
-        {# fix for organization title not translating in sidebar #}
-        {% do org.update(title = h.get_term_translation(org.title, h.lang()))%}
+        {% do pkg.update(organization = org) %} 
     {% endif %}
 {% endif %}
 
+{# fix for organization and group title non translation in sidebar #}
+{% do h.get_translated_dataset_groups([c.pkg_dict], h.lang()) %}
 
 {% block toolbar %}
 {{ super() }}
@@ -63,35 +65,34 @@
  {% block secondary_content %}
     {% if pkg.organization %}
     {% block package_organization %}
-
         {% snippet "snippets/organization.html", organization=org , has_context_title=true  %}
     {% endblock %}
     {% endif %}
 
-      {% if pkg.groups %}
+    {% if pkg.groups %}
     {% block package_group %}
-    {% snippet "snippets/group.html", group=pkg.groups %}
+        {% snippet "snippets/group.html", group=pkg.groups %}
     {% endblock %}
     {% endif %}
 
     {% if pkg.tags %}
-  {% block package_side_tags %}
-    {% snippet "package/snippets/tags.html", tags=pkg.tags %}
+    {% block package_side_tags %}
+        {% snippet "package/snippets/tags.html", tags=pkg.tags %}
     {% endblock %}
     {% endif %}
     
     {% if pkg.spatial %}
-  {% snippet "spatial/snippets/dataset_map_sidebar.html", extent=pkg.spatial %}
-  {% endif %}
+        {% snippet "spatial/snippets/dataset_map_sidebar.html", extent=pkg.spatial %}
+    {% endif %}
 
 
-  {% block package_license %}
-{% snippet "snippets/license.html", pkg_dict=pkg %}
-{% endblock %}
+    {% block package_license %}
+        {% snippet "snippets/license.html", pkg_dict=pkg %}
+    {% endblock %}
 
-{% block package_social %}
-{% snippet "snippets/social.html" %}
-{% endblock %} 
+    {% block package_social %}
+        {% snippet "snippets/social.html" %}
+    {% endblock %} 
 
 {% endblock %}
 
