removed lang from translate functions parameters

--- a/ckanext/publicamundi/themes/geodata/templates/home/layout_slider.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/layout_slider.html
@@ -13,7 +13,7 @@
 <div id="package-list-home">
 <div class="container">
     <h4>{{ _('Latest Updates') }}</h4>
-    {% snippet 'snippets/package_list_home.html', packages = h.get_translated_dataset_groups(h.newest_datasets(),h.lang()), hide_resources=true %}
+    {% snippet 'snippets/package_list_home.html', packages = h.get_translated_dataset_groups(h.newest_datasets()), hide_resources=true %}
 </div>
 </div>
 </div>
