--- a/ckanext/publicamundi/templates/package/new_resource.html
+++ b/ckanext/publicamundi/templates/package/new_resource.html
@@ -14,7 +14,7 @@
 
 {% block form %}
 {% snippet 'package/snippets/resource_form.html', 
-    data=data, errors=errors, error_summary=error_summary, include_metadata=false, pkg_name=pkg_name, stage=stage, allow_upload=g.ofs_impl and logged_in 
+    data=data, errors=errors, error_summary=error_summary, include_metadata='hide', pkg_name=pkg_name, stage=stage, allow_upload=g.ofs_impl and logged_in 
 %}
 {% endblock %}
 
