--- a/ckanext/publicamundi/templates/package/snippets/resource_form.html
+++ b/ckanext/publicamundi/templates/package/snippets/resource_form.html
@@ -5,7 +5,7 @@
 {% set action = form_action or h.url_for(controller='package', action='new_resource', id=pkg_name) %}
 
 <form id="resource-form" class="dataset-form dataset-resource-form form-horizontal" method="post" action="{{ action }}" 
-    data-module="basic-form resource-form" enctype="multipart/form-data"
+    data-module="basic-form resource-form{% if include_metadata %} resource-metadata{% endif %}" enctype="multipart/form-data"
   >
     {% block stages %}
     {# An empty stages variable will not show the stages #}
@@ -61,10 +61,10 @@
     {% endblock %} {# basic_fields_format #}
 
     {% block metadata_fields %}
-    {% if include_metadata %}
+    {% if include_metadata == 'edit' %}
     {{ form.input(
          'last_modified', 
-         id='field-last-modified', 
+         id='field-last_modified', 
          label=_('Last Modified'), 
          placeholder=_('eg. 2012-06-05'), 
          value=data.last_modified,
@@ -90,13 +90,20 @@
      }}
     {{ form.input(
          'mimetype_inner',
-         id='field-mimetype-inner',
+         id='field-mimetype_inner',
          label=_('MIME Type'),
          placeholder=_('eg. application/json'),
          value=data.mimetype_inner,
          error=errors.mimetype_inner,
          classes=[])
     }}
+    {% elif include_metadata == 'hide' %}
+    <div class="hidden-fields">
+      {% for name in ['last_modified', 'size', 'mimetype', 'mimetype_inner'] %}
+      {% set value = data.get(name) -%}
+      <input type="hidden" id="field-{{name}}" name="{{name}}" value="{{value if value else ''}}" />
+      {% endfor %}  
+    </div>
     {% endif %} {# include_metadata #}
     {% endblock %} {# metadata_fields #}
 
@@ -131,3 +138,5 @@
     </div>
 
 </form>
+
+{% resource 'ckanext-publicamundi/resource-metadata' %}
