Added encoding and projection (EPSG Code) validation in ingestion workflow.

--- a/ckanext/publicamundi/storers/vector/templates/export/export.html
+++ b/ckanext/publicamundi/storers/vector/templates/export/export.html
@@ -86,9 +86,9 @@
 	      
 	</div>
 
-	<div id="divproj" class="form-select " data-module="projection-autocomplete" data-module-search_epsg_url="{{search_epsg_url}}">
+	<div id="divproj" class="form-select " data-module="projection-autocomplete" data-module-search_epsg_url="{{search_epsg_url}}" data-module-layer_idx="0">
 		
-		<label>{{ _('Select projection')}}</label> <input  id="projection" type="text">
+		<label>{{ _('Select projection')}}</label> <input  id="layer_srs_0" type="text">
 	      
 	</div>
 
