--- a/ckanext/publicamundi/templates/user/dashboard_resources.html
+++ b/ckanext/publicamundi/templates/user/dashboard_resources.html
@@ -9,5 +9,8 @@
     {% snippet 'user/snippets/package_list.html', packages=c.page.items, parent='dashboard' %}
     {{ c.page.pager() }}
     {% endif %}
+    {% resource 'ckanext-publicamundi-vector/styles' %}
+  
+
   </div>
   {% endblock %}
