--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -546,6 +546,7 @@ p a{
     display: inline-block;
     float: none;
     border-radius:0;
+    margin: 0 2px;
     border: 2px #fff solid;
 }
 .carousel-indicators li:hover{
@@ -1670,7 +1671,9 @@ p a{
 }
 /* About page */
 .about{
-    width: 70%;
+}
+.about-secondary{
+    margin-top: 20px;
 }
 /* Pagination */
 .module .pagination{
