--- a/ckanext/publicamundi/templates/snippets/rating.html
+++ b/ckanext/publicamundi/templates/snippets/rating.html
@@ -9,14 +9,14 @@
     {% set star_class='icon-star-half-full' %}
 {% else %}
     {% set star_class='icon-star-empty' %}
-    {% endif %} 
+{% endif %} 
 
-{% if user %}
-<a title="{{rating}}" class="{{ star_class}}" href="#" data-module='dataset-rating' data-module-pkg_name="{{pkg.name}}" data-module-rating="{{rating}}"></a>
-{% else %}
-<i title="{{rating}}" class="{{star_class}}"></i>
+{# {% if user %} #}
+<a title="{{rating}}" class="{{ star_class }}" href="#" data-module='dataset-rating' data-module-pkg_name="{{pkg.name}}" data-module-rating="{{rating}}"></a>
+{# {% else %} #}
+<!-- <i title="{{rating}}" class="{{star_class}}"></i> -->
 
-{% endif %}
+{# {% endif %} #}
 {% endfor %}
 <div class="rating-count">(<span id="rating-count">{{ num_ratings}}</span> {{_('votes')}})</div>
 </div>
