--- a/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
+++ b/ckanext/publicamundi/themes/geodata/templates/user/dashboard.html
@@ -17,13 +17,14 @@
         </div>
         <ul class="nav nav-tabs">
 
-    {% block page_header_navtab_links %}
+{% block page_header_navtab_links %}
     {{ h.build_nav_icon('user_dashboard_datasets', _('My Datasets')) }}
     {{ h.build_nav_icon('user_dashboard_resources', _('Resources'), icon='cogs') }}
     {{ h.build_nav_icon('user_dashboard_organizations', _('My Organizations')) }}
-    {{ h.build_nav_icon('user_dashboard_groups', _('My Groups')) }}
+    {{ h.build_nav_icon('user_dashboard_groups', _('My Topics')) }}
     {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
-    {% endblock %}
+{% endblock %}
+
     </ul>
       </header>
     {% endblock %}
