--- a/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/facet_list.html
@@ -38,6 +38,7 @@ within_tertiary
 
 #}
 {% set hide_empty = hide_empty or false %}
+{% set LIMIT = 5 %}
 {% with items = items or h.get_facet_items_dict(name, limit=50) %}
   {% if items or not hide_empty %}
     {% if within_tertiary %}
@@ -45,7 +46,7 @@ within_tertiary
       {% set nav_item_class = ' ' %}
       {% set wrapper_class = 'nav-facet nav-facet-tertiary' %}
     {% endif %}
-    {% if items %}
+    {% if items|length>1 %}
     <section class="{{ wrapper_class or 'module module-narrow module-shallow' }}">
 
     <h2 class="module-heading">
@@ -90,18 +91,13 @@ within_tertiary
                 </li>
             {% endfor %}
           </ul>
-        </nav>
+          </nav>
+        {% if items|length >= LIMIT %}
         <p class="module-footer">
-        {#  {% if h.get_param_int('_%s_limit' % name) %}
-          <a href="{{ h.remove_url_param('_%s_limit' % name, replace=0, extras=extras, alternative_url=alternative_url) }}" class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a>
-          
-            {% else %} 
-           <a href="{{ h.remove_url_param('_%s_limit' % name, extras=extras, alternative_url=alternative_url) }}" class="read-more">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a> 
-           {% endif %} #}
-
             <a href="#" class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a> 
             <a href="#" class="read-less hidden">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a> 
-        </p>
+            </p>
+        {% endif %}
         {% endif %}
     </section>
       {% else %}
