--- a/ckanext/publicamundi/themes/geodata/templates/group/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/group/read.html
@@ -12,6 +12,19 @@
   {% endblock %}
 {% endblock %}
 
+{% block secondary_content %}
+
+  {% snippet "group/snippets/info.html", group=c.group_dict, show_nums=true %}
+{% for facet in c.facet_titles %}
+  {% if facet == 'groups' %}
+    {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}, hide_section=true) }}
+  {% else %}
+    {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}) }}
+  {% endif %}
+        
+
+  {% endfor %}
+{% endblock %}
 
 {% block scripts %}
 {{ super() }}
