--- a/ckanext/publicamundi/themes/geodata/templates/organization/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/organization/read.html
@@ -17,6 +17,17 @@
   {% endblock %}
 {% endblock %}
 
+{% block organization_facets %}
+{% for facet in c.facet_titles %}
+    {% if facet == 'organization' %}
+    {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}, hide_section=true) }}
+    {% else %}
+    {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet, extras={'id':c.group_dict.id}) }}
+    {% endif %}
+  {% endfor %}
+{% endblock %}
+
+
 {% block scripts %}
 {{ super() }}
 {% resource 'ckanext-publicamundi-geodata-theme/facets' %}
