--- a/ckanext/publicamundi/themes/geodata/templates/home/snippets/promoted_new.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/snippets/promoted_new.html
@@ -3,6 +3,6 @@
       <h1 class="page-heading">{{ _("Open data, accessible to everyone!") }}</h1>
   </header>
   <section class="featured media-overlay">
-  <a href="about"><button class="btn bnt-primary">{{_('Learn More')}}</button></a>
+  <a href="{{ h.redirect_wp('about')}}"><button class="btn bnt-primary">{{_('Learn More')}}</button></a>
   </section>
 </div>
