--- a/ckanext/publicamundi/themes/geodata/templates/package/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/read.html
@@ -96,6 +96,10 @@
         {% snippet "snippets/license.html", pkg_dict=pkg %}
     {% endblock %}
 
+    {% block package_developers %}
+        {% snippet "snippets/developers.html", pkg_dict=pkg %}
+    {% endblock %} 
+
     {% block package_social %}
         {% snippet "snippets/social.html" %}
     {% endblock %} 
