--- a/ckanext/publicamundi/themes/geodata/templates/package/read_base.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/read_base.html
@@ -5,5 +5,6 @@
   {{ h.build_nav_icon('dataset_groups', _('Topics'), id=pkg.name) }}
   {{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
   {{ h.build_nav_icon('related_list', _('Related'), id=pkg.name) }}
+  {# {{ h.build_nav_icon('dataset_apis', _('Developers'), id=pkg.name, icon='code') }} #}
 {% endblock %}
 
