--- a/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/organization.html
@@ -18,7 +18,9 @@ Example:
 {% with truncate=truncate or 0, url=h.url_for(controller='organization', action='read', id=organization.name) %}
 <div class="module module-narrow module-shallow context-info">
     {% if has_context_title %}
-      <h2 class="module-heading">{{ _('Organization') }}</h2>
+ 
+        <h2 class="module-heading"><img class="facet-icon" src="{{ h.url_for_static('/images/icons/various/organizations.svg') }}"></img>
+{{ _('Organization') }}</h2>
     {% endif %}
       <!--<i class="icon-building"></i> -->
     <section class="module-content">
