--- a/ckanext/publicamundi/themes/geodata/templates/snippets/social.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/social.html
@@ -1,6 +1,6 @@
 {% set current_url = h.full_current_url() %}
 <section class="social">
-<h2 class="module-heading">{{ _('Share') }}</h2>
+<h2 class="module-heading"><i class="icon-share social-icon"></i> {{ _('Share') }}</h2>
   <ul class="unstyled">
     <li><a href="https://plus.google.com/share?url={{ current_url }}" target="_blank"><i class="icon-google-plus-sign"></i></a></li>
     <li><a href="https://twitter.com/share?url={{ current_url }}" target="_blank"><i class="icon-twitter-sign"></i></a></li>
