dataset page fixes

--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -1207,7 +1207,7 @@ a.tag:hover{
 }
 
 .site-footer{
-    background-color: #ECECEC;
+    background: #ECECEC;
     color: #6B75B3;
 }
 .site-footer a, .site-footer label{
