--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/metadata_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/metadata_api.html
@@ -2,7 +2,7 @@
 
 <div class="accordion-group">
     <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-dev" href="#collapse-querying-mdapi">{{ _('CKAN Metadata API') }} &raquo;</a>
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-dev" href="#collapse-querying-mdapi">{{ _('Metadata API') }} &raquo;</a>
     </div>
     <div id="collapse-querying-mdapi" class="collapse accordion-body">
         <div class="accordion-inner">
