moved dataset rating functionality to geodata theme

--- a/ckanext/publicamundi/themes/geodata/public/css/main.css
+++ b/ckanext/publicamundi/themes/geodata/public/css/main.css
@@ -1194,6 +1194,22 @@ p a{
 .resource-info{
     max-width: 300px;
 }
+/*
+ * Package rating
+ */
+.package-rating{
+    float: right;
+    cursor: default;
+}
+.package-rating i{
+    color: #4E59A4;
+}
+.rating-count{
+    text-align: center;
+}
+.package-rating a:hover, .package-rating a:focus{
+    text-decoration: none;
+}
 /* Metadata Tables */
 .table tr.toggle-separator{
     display:none;
