--- a/ckanext/publicamundi/themes/geodata/templates/package/read.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/read.html
@@ -11,6 +11,15 @@
 
 {% endblock %}
 
+{% block package_description %}
+    {% if h.package_rating_enabled() %}
+    {% block package_rating %}
+        {% snippet "snippets/rating.html", pkg=pkg, num_ratings=c.num_ratings, current_rating=c.current_rating, user=c.user  %}
+    {% endblock %}
+    {% endif %}
+  {{ super() }}
+  {% endblock %}
+
 {% block package_notes %}
 <div class="dataset-dates">
     <div> {{_('Publication:')}} {{ pkg.metadata_created.split('T')[0] or pkg.metadata_created or _('Never')}}</div>
@@ -71,4 +80,9 @@
 {% snippet "snippets/social.html" %}
 {% endblock %} 
 
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{% resource 'ckanext-publicamundi-geodata-theme/ratings' %}
 {% endblock %}
