--- a/ckanext/publicamundi/themes/geodata/templates/package/read_base.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/read_base.html
@@ -4,6 +4,11 @@
   {{ h.build_nav_icon('dataset_read', _('Dataset'), id=pkg.name) }}
   {{ h.build_nav_icon('dataset_groups', _('Topics'), id=pkg.name) }}
   {{ h.build_nav_icon('dataset_activity', _('Activity Stream'), id=pkg.name) }}
-  {# {{ h.build_nav_icon('dataset_apis', _('Developers'), id=pkg.name, icon='code') }} #}
+  {{ h.build_nav_icon('dataset_apis', _('Developers'), id=pkg.name, icon='code') }}
+  {% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{% resource 'ckanext-publicamundi-geodata-theme/contact' %}
 {% endblock %}
 
