--- a/ckanext/publicamundi/themes/geodata/templates/snippets/contact.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/contact.html
@@ -1,6 +1,6 @@
 <div class="section-contact">
-        <button class="btn btn-primary contact-button" href="#" data-toggle="modal" data-module-id="contact-form" data-target="#contact-form-modal" data-module="contact-form" > <i class="icon-envelope"></i>
-            {% trans %}<span class='contact-term'>Contact</span>{% endtrans %} </button>
-
-{% snippet 'snippets/contact_form.html', pkg=pkg %}
+    <a class="btn btn-primary contact-button" href="#" data-toggle="modal" data-module-pkg-id="{{pkg.id}}" data-target="#contact-form-modal" data-module-pkg-title="{{pkg.title}}">
+   <i class="icon-envelope"></i>
+            {% trans %}<span class='contact-term'>Contact</span>{% endtrans %} </a>
+    {% snippet 'snippets/contact_form.html', pkg=pkg %}
 </div>
