--- a/ckanext/publicamundi/themes/geodata/templates/package/developers.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/developers.html
@@ -26,7 +26,7 @@
 {% block secondary_content %}
     {% if pkg.organization %}
     {% block package_organization %}
-      {% snippet "snippets/organization.html", organization=pkg.organization , has_context_title=true  %}
+      {% snippet "snippets/organization.html", pkg=pkg, organization=pkg.organization , has_context_title=true  %}
     {% endblock %}
     {% endif %}
 
