--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/developers/mapping_api.html
@@ -19,9 +19,13 @@
         <div class="accordion-inner">
             {% if res %}
             {% snippet 'package/snippets/developers/mapping_api_js.html', res=res, format=format %}
+
             {% else %}
-            <strong>{{ _('The dataset contains no suitable data to use with the Mapping API')}}</strong>
+            <strong>{{ _('The dataset contains no suitable data to use with the Mapping API')}}</strong><br><br>
             {% endif %}
+            <strong>{%trans%}You can find detailed Mapping API demos <a href="/mapping-api" target="_blank">here</a>{%endtrans%}
+            </strong>
+
         </div>
     </div>
 </div>
